Upgraded to Java 17 and Spring 6